--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -69,7 +69,7 @@
                                 <div class="ism-caption ism-caption-0 bold">Changer.js (Mini-Library)</div>
                             </li>
                             <li>
-                                <a href="/projects/prodbydaz"><img src="img/projects/phenixgames.png"></a>
+                                <a href="/projects/phenixgameshomepage"><img src="img/projects/phenixgames.png"></a>
                                 <div class="ism-caption ism-caption-0 bold">PhenixGames Homepage</div>
                             </li>
                             <li>
@@ -95,6 +95,14 @@
                             <li>
                                 <a href="/projects/la_campana_unofficial_design"><img src="img/projects/la_campana_design.png" width="100%"></a>
                                 <div class="ism-caption ism-caption-0 bold">La Campana Website Design (unofficial)</div>
+                            </li>
+                            <li>
+                                <a href="/projects/veryeasycalculator"><img src="img/projects/veryeasycalculator.png" width="100%"></a>
+                                <div class="ism-caption ism-caption-0 bold">Very Easy Calculator</div>
+                            </li>
+                            <li>
+                                <a href="/projects/cookieclicker"><img src="img/projects/cookieclicker.png" width="100%"></a>
+                                <div class="ism-caption ism-caption-0 bold">Cookie Clicker</div>
                             </li>
                         </ol>
                       </div>
