--- a/src/views/projects/la_campana_unofficial_design.ejs
+++ b/src/views/projects/la_campana_unofficial_design.ejs
@@ -8,22 +8,22 @@
     </head>
     <body>
         <div class="p_detail">
-            <div class="p_info">
-                <a href="../" id="back">back</a>
-                <h1>La Campana Website Design (unofficial)</h1>
+            <a href="../" id="back">back</a>
+            <header>
+                <h1 class="absolute">La Campana Website Design (unofficial)</h1>
+                <p class="absolute"><img src="https://img.icons8.com/color/48/000000/adobe-xd--v1.png" alt="Adobe XD"/></p>
+            </header>
+            <main class="p_info">
                 <h4>Die Grundidee ...</h4>
                 <p>
                     ... hinter diesem Projekt war, dass ein Freund und ich Lust hatten für ein Lokales Restaurant eine neue Webseite zu erstellen. Wir beide sind nicht die geborenen Designer; Aber zwei doofe ergibt meistens ein schlauer.
                     Also haben wir uns an das Design zu erst gesetzt. Ein paar Stunden später haben wir unsere feste Designidee (siehe PDF) an das Restaurant geschickt. Es sah zu erst sehr viel versprechend aus, jedoch kam nach einiger Zeit keine Antwort mehr. <br />
                     Bis dann im Frühjar 2022 das Restaruant eine neue Webseite bekommen hat. Nicht von uns...
                 </p>
-                <h4>Entwickelt mit:</h4>
-                <p><img src="https://img.icons8.com/color/48/000000/adobe-xd--v1.png" alt="Adobe XD"/></p>
-
-            </div>
-            <div class="p_img">
+            </main>
+            <footer class="p_img">
                 <iframe src="../img/projects/pdf/la_campana_design.pdf"></iframe>
-            </div>
+            </footer>
         </div>
     </body>
 </html>
