--- a/src/views/projects/mittelbot.ejs
+++ b/src/views/projects/mittelbot.ejs
@@ -8,23 +8,23 @@
     </head>
     <body>
         <div class="p_detail">
-            <div class="p_info">
-                <a href="../" id="back">back</a>
-                <h1>Mittelbot - Discord Bot</h1>
+            <a href="../" id="back">back</a>
+            <header>
+                <h1 class="absolute">Mittelbot - Discord Bot</h1>
+                <p class="absolute"><img src="https://img.icons8.com/color/48/000000/nodejs.png" title="node.js"/></p>
+            </header>
+            <main class="p_info">
                 <h4>Die Grundidee ...</h4>
                 <p>
                     ... hinter dem Bot war eigentlich nur das Testen der Discord API. Daraus enstand schnell ein Feature nach dem anderen. <br />
                     Jetzt hat der Bot die Grundfeatures eines Moderations Bot und alle Informationen, die benötigt werden, werden in einer Datenbank gespeichert.
                 </p>
-                <h4>Entwickelt mit:</h4>
-                <p><img src="https://img.icons8.com/color/48/000000/nodejs.png" title="node.js"/></p>
-
-            </div>
-            <div class="p_img">
+            </main>
+            <footer class="p_img">
                 <video autoplay muted loop>
                     <source src="../mp4/mittelbot_v1.mp4">
                 </video>
-            </div>
+            </footer>
         </div>
     </body>
 </html>
