--- a/src/views/projects/subscriptor.ejs
+++ b/src/views/projects/subscriptor.ejs
@@ -8,25 +8,24 @@
     </head>
     <body>
         <div class="p_detail">
-            <div class="p_info">
-                <a href="../" id="back">back</a>
-                <h1>Subscriptor</h1>
+            <a href="../" id="back">back</a>
+            <header>
+                <h1 class="absolute">Subscriptor</h1>
+                <p class="absolute"><span><img src="https://img.icons8.com/windows/48/000000/vuejs.png" title="vue.js"/> <img src="https://img.icons8.com/offices/45/000000/php-logo.png" title="php"/> <img src="https://img.icons8.com/ios-filled/48/000000/yii-framework.png" title="yii"/>, Axios</span></p>
+            </header>
+            <main class="p_info">
                 <h4>Die Grundidee ...</h4>
                 <p>
                     ... hinter diesem Projekt, war das Praktikum welches ich im Sommer 2021 bei <a href="https://sascha-nos.com">Sascha Nos</a> vollbracht habe. <br />
                     Dort sollte ich eine Webseite enwtickeln, in der man seine Abonnements hinzufügen und verwalten kann. Dazu ein Notificationsystem, welches den Benutzer in Echtzeit über die neuesten Updates seiner Abonnements informiert. 
                     Leider ist der Sourcode privat und die Seite zu diesem Zeitpunkt immer mal wieder nicht erreichbar. Deswegen hier ein paar Bilder der Webseite aus meinem Praktikumsbericht.
                 </p>
-                <h4>Entwickelt mit:</h4>
-                <p>
-                    <span><img src="https://img.icons8.com/windows/48/000000/vuejs.png" title="vue.js"/> <img src="https://img.icons8.com/offices/45/000000/php-logo.png" title="php"/> <img src="https://img.icons8.com/ios-filled/48/000000/yii-framework.png" title="yii"/>, Axios</span>
-                </p>
-            </div>
-            <div class="p_img">
+            </main>
+            <footer class="p_img">
                 <img src="../img/projects/subscriptor_login.png" />
-                <img src="../img/projects/subscriptor_startseite.png" />
-                <img src="../img/projects/subscriptor_neuervertrag.png" />
-            </div>
+                <img src="../img/projects/subscriptor_startseite.png" width="100%"/>
+                <img src="../img/projects/subscriptor_neuervertrag.png"  width="100%"/>
+            </footer>
         </div>
     </body>
 </html>
