--- a/src/views/projects/veryeasycalculator.ejs
+++ b/src/views/projects/veryeasycalculator.ejs
@@ -8,24 +8,24 @@
     </head>
     <body>
         <div class="p_detail">
-            <div class="p_info">
-                <a href="../" id="back">back</a>
-                <h1>Very easy Calculator</h1>
+            <a href="../" id="back">back</a>
+            <header>
+                <h1 class="absolute">Very easy Calculator</h1>
+                <p class="absolute"><img src="https://img.icons8.com/color/48/000000/javascript--v1.png"/> <img src="https://img.icons8.com/ios-filled/50/000000/jquery.png" title="jquery"/></p>
+            </header>
+            <main class="p_info">
                 <h4>Die Grundidee ...</h4>
                 <p>
                     ... hinter diesem Projekt, war um meine JavaScript Kenntnisse aufzufrischen und meinem Portfolio etwas kleines hinzuzufügen.
                 </p>
                 <div class="p_links">
-                    <img src="https://img.icons8.com/material-outlined/48/000000/external-link.png"/><h5><a href="https://mecksauer.de/projects/Calculator-JavaScript/">Webseite</a></h5> <br />
+                    <img src="https://img.icons8.com/material-outlined/48/000000/external-link.png"/><h5><a href="https://mittelblut9.github.io/Calculator-JavaScript/">Webseite</a></h5> <br />
                     <img src="https://img.icons8.com/color/48/000000/code.png"/><h5><a href="https://github.com/Mittelblut9/Calculator-JavaScript">GitHub</a></h5>
                 </div>
-                <h4>Entwickelt mit:</h4>
-                <p><img src="https://img.icons8.com/color/48/000000/javascript--v1.png"/> <img src="https://img.icons8.com/ios-filled/50/000000/jquery.png" title="jquery"/></p>
-
-            </div>
-            <div class="p_img">
-                <img src="../img/projects/calculator.png" />
-            </div>
+            </main>
+            <footer class="p_img">
+                <img src="../img/projects/veryeasycalculator.png" />
+            </footer>
         </div>
     </body>
 </html>
