--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
 @import url('./media.css');
+@import url('./projects/project.css');
 
 :root {
   --white: rgb(226, 226, 226);
@@ -23,6 +24,10 @@ html {
   padding: 0;
   font-family: roboto, sans-serif;
   background: rgb(202, 202, 202);
+}
+
+a {
+  color: inherit;
 }
 
 .top_page {
@@ -135,65 +140,6 @@ html {
 
 .references main {
   padding: 90px 0;
-}
-
-.p_info {
-  padding: 30px;
-  width: 50%;
-  float: left;
-}
-
-.p_info h1 {
-  font-size: 4rem;
-}
-
-.p_info h4 {
-  font-size: 1.4rem;
-}
-
-.p_info h1,
-.p_info h4 {
-  text-align: left;
-}
-
-.p_info p {
-  text-align: left;
-  margin: 0 0 70px 0;
-}
-
-.p_links {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: -30px 0 0 0;
-}
-
-.p_links h5 {
-  margin: 0 10px;
-}
-
-.p_links img {
-  margin: 0 0 0 20px;
-}
-
-
-.p_img{
-  width: 50%;
-  float: right;
-  text-align: right;
-  padding: 20px;
-}
-
-.p_img img:first-of-type,
-.p_img video,
-.p_img iframe {
-  margin: 200px 0 0 0;
-  width: 100%;
-  border: 6px solid black;
-}
-
-.p_img iframe {
-  height: 60vh;
 }
 
 footer {
