--- a/src/views/projects/changerjs.ejs
+++ b/src/views/projects/changerjs.ejs
@@ -8,9 +8,12 @@
     </head>
     <body>
         <div class="p_detail">
-            <div class="p_info">
-                <a href="../" id="back">back</a>
-                <h1>Changer.js (Mini-Library)</h1>
+            <a href="../" id="back">back</a>
+            <header>
+                <h1 class="absolute">Changer.js (Mini-Library)</h1>
+                <p class="absolute"><img src="https://img.icons8.com/color/48/000000/javascript--v1.png" title="javascript"/> <img src="https://img.icons8.com/ios-filled/50/000000/jquery.png" title="jquery"/></p>
+            </header>
+            <main class="p_info">
                 <h4>Die Grundidee ...</h4>
                 <p>
                     ... hinter dieser Mini-Library war, dass man ganz einfach Änderungen in (mehreren) Inputs weiterverwenden kann.
@@ -18,13 +21,10 @@
                 <div class="p_links">
                     <img src="https://img.icons8.com/color/48/000000/code.png"/><h5><a href="https://github.com/Mittelblut9/ChangerJs">GitHub</a></h5>
                 </div>
-                <h4>Entwickelt mit:</h4>
-                <p><img src="https://img.icons8.com/color/48/000000/javascript--v1.png" title="javascript"/> <img src="https://img.icons8.com/ios-filled/50/000000/jquery.png" title="jquery"/></p>
-
-            </div>
-            <div class="p_img">
+            </main>
+            <footer class="p_img">
                 <img src="../img/projects/changerjs.png" />
-            </div>
+            </footer>
         </div>
     </body>
 </html>
