--- a/src/views/projects/easylogindesign.ejs
+++ b/src/views/projects/easylogindesign.ejs
@@ -8,9 +8,12 @@
     </head>
     <body>
         <div class="p_detail">
-            <div class="p_info">
-                <a href="../" id="back">back</a>
-                <h1>Easy Login Design</h1>
+            <a href="../" id="back">back</a>
+            <header>
+                <h1 class="absolute">Easy Login Design</h1>
+                <p class="absolute"><img src="https://img.icons8.com/color/50/000000/html-5.png" title="html"/> <img src="https://img.icons8.com/color/48/000000/css3.png" title="css"/> <img src="https://img.icons8.com/color/48/000000/javascript--v1.png" title="javascript"/> <img src="https://img.icons8.com/ios-filled/50/000000/jquery.png" title="jquery"/></p>
+            </header>
+            <main class="p_info"> 
                 <h4>Die Grundidee ...</h4>
                 <p>
                     ... hinter dem Design, war dass man den Sign-In und Sign-Up Bereich direkt in einer Datei hat und nicht unötig mehrere benötigt.
@@ -19,13 +22,10 @@
                     <img src="https://img.icons8.com/material-rounded/48/000000/external-link.png"/><h5><a href="https://mecksauer.de/projects/Easy-Login-Design-V1/Login.html">Webseite</a></h5><br />
                     <img src="https://img.icons8.com/color/48/000000/code.png"/><h5><a href="https://github.com/Mittelblut9/Easy-Login-Design-V1">GitHub</a></h5>
                 </div>
-                <h4>Entwickelt mit:</h4>
-                <p><img src="https://img.icons8.com/color/50/000000/html-5.png" title="html"/> <img src="https://img.icons8.com/color/48/000000/css3.png" title="css"/> <img src="https://img.icons8.com/color/48/000000/javascript--v1.png" title="javascript"/> <img src="https://img.icons8.com/ios-filled/50/000000/jquery.png" title="jquery"/></p>
-
-            </div>
-            <div class="p_img">
+            </main>
+            <footer class="p_img">
                 <img src="../img/projects/easylogin.png" />
-            </div>
+            </footer>
         </div>
     </body>
 </html>
