--- a/src/views/projects/phenixgameshomepage.ejs
+++ b/src/views/projects/phenixgameshomepage.ejs
@@ -8,9 +8,12 @@
     </head>
     <body>
         <div class="p_detail">
-            <div class="p_info">
-                <a href="../" id="back">back</a>
-                <h1>PhenixGames Homepage</h1>
+            <a href="../" id="back">back</a>
+            <header>
+                <h1 class="absolute">PhenixGames Homepage</h1>
+                <p class="absolute"><img src="https://img.icons8.com/windows/48/000000/vuejs.png" title="Vue.js"/></p>
+            </header>
+            <main class="p_info">
                 <h4>Die Grundidee ...</h4>
                 <p>
                     ... hinter dieser Webseite war die Präsentation des privaten Projektes von mir und zwei Freunden.
@@ -19,13 +22,10 @@
                     <img src="https://img.icons8.com/material-rounded/48/000000/external-link.png"/><h5><a href="https://mecksauer.de/projects/PhenixGamesHomepage/dist">Webseite</a></h5> <br />
                     <img src="https://img.icons8.com/color/48/000000/code.png"/><h5><a href="https://github.com/PhenixGames/PhenixGames-Homepage">GitHub</a></h5>
                 </div>
-                <h4>Entwickelt mit:</h4>
-                <p><img src="https://img.icons8.com/windows/48/000000/vuejs.png" title="Vue.js"/></p>
-
-            </div>
-            <div class="p_img">
+            </main>
+            <footer class="p_img">
                 <img src="../img/projects/phenixgames.png" />
-            </div>
+            </footer>
         </div>
     
     </body>
