--- a/src/views/projects/phenixgamesteam.ejs
+++ b/src/views/projects/phenixgamesteam.ejs
@@ -8,9 +8,12 @@
     </head>
     <body>
         <div class="p_detail">
-            <div class="p_info">
-                <a href="../" id="back">back</a>
-                <h1>PhenixGames Teambereich</h1>
+            <a href="../" id="back">back</a>
+            <header>
+                <h1 class="absolute">PhenixGames Teambereich</h1>
+                <p class="absolute"><span><img src="https://img.icons8.com/windows/48/000000/vuejs.png" title="vue.js"/> <img src="https://img.icons8.com/color/48/000000/nodejs.png" title="node.js"/>, Axios</span></p>
+            </header>
+            <main class="p_info">
                 <h4>Die Grundidee ...</h4>
                 <p>
                     ... hinter diesem Projekt, ist ein Bereich für Teammitglieder des Projektes. Dort kann man In-Game relevante Informationen eines Spielers oder eines Fahzeuges ändern (z.B. einen Spieler bannen oder ein Fahrzeug löschen). Forum Beiträge erstellen, Bewerbungen/Anträge einsehen, annehmen oder ablehnen, Webseitbezogenen Daten ändern und Logs einschauen.<br />
@@ -22,17 +25,12 @@
                     <img src="https://img.icons8.com/color/48/000000/code.png"/><h5><a href="https://github.com/PhenixGames/PhenixGames-Team-Frontend">GitHub Frontend</a></h5>
                     <img src="https://img.icons8.com/color/48/000000/code.png"/><h5><a href="https://github.com/PhenixGames/PhenixGames-Team-Backend">GitHub Backend</a></h5>
                 </div>
-                <h4>Entwickelt mit:</h4>
-                <p>
-                    <span><img src="https://img.icons8.com/windows/48/000000/vuejs.png" title="vue.js"/> <img src="https://img.icons8.com/color/48/000000/nodejs.png" title="node.js"/>, Axios</span>
-                </p>
-
-            </div>
-            <div class="p_img">
+            </main>
+            <footer class="p_img">
                 <video autoplay muted loop>
                     <source src="../mp4/2021-11-28 15-04-45_Trim.mp4">
                 </video>
-            </div>
+            </footer>
         </div>
     </body>
 </html>
