--- a/src/views/projects/redesign.ejs
+++ b/src/views/projects/redesign.ejs
@@ -8,12 +8,15 @@
     </head>
     <body>
         <div class="p_detail">
-            <div class="p_info">
-                <a href="../" id="back">back</a>
-                <h1>Redesign (Schulprojekt)</h1>
+            <a href="../" id="back">back</a>
+            <header>
+                <h1 class="absolute">Redesign (Schulprojekt)</h1>
+                <p class="absolute"><img src="https://img.icons8.com/color/50/000000/html-5.png"/> <img src="https://img.icons8.com/color/48/000000/css3.png"/> <img src="https://img.icons8.com/color/48/000000/javascript--v1.png"/> <img src="https://img.icons8.com/ios-filled/50/000000/jquery.png" title="jquery"/></p>
+            </header>
+            <main class="p_info">
                 <h4>Die Grundidee ...</h4>
                 <p>
-                    ... hinter dieser Webseite war, die Aufgabe die wir in der Schule aufbekommen haben. Ein komplettes Redesign von der Seite<a href="https://www.visuelle-mediengestaltung.de">https://www.visuelle-mediengestaltung.de</a>.
+                    ... hinter dieser Webseite war, die Aufgabe die wir in der Schule aufbekommen haben. Ein komplettes Redesign von der Seite <a href="https://www.visuelle-mediengestaltung.de">https://www.visuelle-mediengestaltung.de</a>.
                     Ich habe mich nach ein paar Skizzen und Wireframes sofort an die Entwicklung der Seite begeben. Nach einer Zeit war die alte Seite so voll mit JavaScript, dass ich selber den Überblick verloren habe. Aus diesem Grund hatte ich 
                     mich entschieden das Ganze von 0 nochmal anzufangen und mehr auf die Codestruktur und organisierung zu achten.<br />
                     In den Settings verstecken sich ein paar Spielereien, wie z.B. Fehlermeldungen on/off, JavaScript Animation on/off, Cookieeinstellungen und einen Darkmode.
@@ -22,13 +25,10 @@
                     <img src="https://img.icons8.com/material-rounded/48/000000/external-link.png"/><h5><a href="https://mecksauer.de/projects/redesign/">Webseite</a></h5><br />
                     <img src="https://img.icons8.com/color/48/000000/code.png"/><h5><a href="https://github.com/Mittelblut9/Portfolio-Website-template">GitHub</a></h5>
                 </div>
-                <h4>Entwickelt mit:</h4>
-                <p><img src="https://img.icons8.com/color/50/000000/html-5.png"/> <img src="https://img.icons8.com/color/48/000000/css3.png"/> <img src="https://img.icons8.com/color/48/000000/javascript--v1.png"/> <img src="https://img.icons8.com/ios-filled/50/000000/jquery.png" title="jquery"/></p>
-
-            </div>
-            <div class="p_img">
+            </main>
+            <footer class="p_img">
                 <img src="../img/projects/redesign.png" />
-            </div>
+            </footer>
         </div>
     </body>
 </html>
