added discord user link & switched from github desktop to git cmd

--- a/src/views/_footer/footer.ejs
+++ b/src/views/_footer/footer.ejs
@@ -3,7 +3,7 @@
     <span class="display-flex justify-content-center">
         <a title="BlackDayz Instagram" href="https://www.instagram.com/blackdayz_de/"><img src="svg/social_media/icons8-instagram.svg"/></a>
         <a title="Mittelblut9 Youtube" href="https://www.youtube.com/channel/UCVXebEQVI5N6-CV7Pnj7J8w"><img src="svg/social_media/icons8-youtube.svg"/></a>
-        <a title="Mitteblut9 Discord name" id="copy_dcname" class="cursor-pointer"><img src="svg/social_media/icons8-discord.svg"/></a>
+        <a title="Mitteblut9 Discord name" href="https://discord.com/users/395923095472570368" class="cursor-pointer"><img src="svg/social_media/icons8-discord.svg"/></a>
         <a title="BlackDayz Xing" href="https://www.xing.com/profile/Benedikt_Sauer12/"><img src="svg/social_media/icons8-xing.svg"/></a>
         <a title="BlackDayz GitHub" href="https://github.com/Mittelblut9"><img src="svg/social_media/icons8-github.svg"/></a>
         <a title="Page Source Code" href="https://github.com/BlackDayz/BlackDayz-Homepage"><img src="svg/social_media/source_code.svg" width="24"/></a>
