Added mittelbot & mido website

--- a/src/views/_head/head.ejs
+++ b/src/views/_head/head.ejs
@@ -39,3 +39,8 @@
 <link rel="apple-touch-icon" href="img/logo/shortcuticon.png" />
 
 <link rel="stylesheet" href="https://blackdayz.github.io/BlackCSS/lib/BlackCSS.css" />
+
+
+
+
+<!-- ! MIDO ! -->
