Removed: Wrong paragraph

--- a/src/views/Mittelbot/Mittelbot.ejs
+++ b/src/views/Mittelbot/Mittelbot.ejs
@@ -100,9 +100,8 @@
                         Get your server on the next level.
                     </p>
                     <p class="subtitle has-text-grey-light is-size-6 mt-3">
-                        Create Projects and Tasks. Be prepared for deadlines with reminders and protect your
-                        server tasks from evils with curtain permissions
                         Set-up Moderation, Leveling, welcome message or logs with an easy command struture.
+                        Protect your server members with the scamprotection.
                     </p>
                     <ul class="content has-text-white">
                         <li>
