modified:   server/route/sideroute/utils/changerjs/ChangerJs 	modified:   src/views/_head/head.ejs

--- a/src/views/_head/head.ejs
+++ b/src/views/_head/head.ejs
@@ -38,7 +38,7 @@
 <link rel="shortcut icon" href="img/logo/shortcuticon.png">
 <link rel="apple-touch-icon" href="img/logo/shortcuticon.png" />
 
-<link rel="stylesheet" href="https://blackdayz.github.io/BlackCSS/lib/BlackCSS.css" />
+<link rel="stylesheet" href="https://blackdayz.de/css/blackcss" />
 
 
 
