--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -43,6 +43,9 @@
                 </div>
             </div>
 
+            <%- include('./mybots/mybots.ejs') %>
+
+
             <div class="references user-select-none">
                 <header class="center">
                     <h2>My work</h2>
