--- a/src/views/Mido/Mido.ejs
+++ b/src/views/Mido/Mido.ejs
@@ -174,7 +174,7 @@
                             <path fill="#9AAAE3"
                                 d="M42.7,-62.9C50.9,-52.8,50.1,-34.4,51.7,-19.2C53.4,-4,57.4,8,56.6,20.8C55.8,33.7,50.1,47.4,39.9,53.8C29.6,60.1,14.8,59.1,0.4,58.5C-14,58,-28,57.9,-38,51.5C-48.1,45,-54.3,32.3,-61.3,18.1C-68.4,4,-76.4,-11.7,-71.9,-22.7C-67.4,-33.6,-50.4,-39.8,-36.3,-47.9C-22.2,-56.1,-11.1,-66.3,3.1,-70.5C17.2,-74.7,34.5,-72.9,42.7,-62.9Z"
                                 transform="translate(100 100)" />
-                        </svg>>
+                        </svg>
                     </div>
 
                     <div class="columns mt-6">
