--- a/src/views/projects/phenixgameshomepage.ejs
+++ b/src/views/projects/phenixgameshomepage.ejs
@@ -19,7 +19,7 @@
                     ... hinter dieser Webseite war die Präsentation des privaten Projektes von mir und zwei Freunden.
                 </p>
                 <div class="p_links">
-                    <img src="https://img.icons8.com/material-rounded/48/000000/external-link.png"/><h5><a href="https://mecksauer.de/projects/PhenixGamesHomepage/dist">Webseite</a></h5> <br />
+                    <img src="https://img.icons8.com/material-rounded/48/000000/external-link.png"/><h5><a href="#">Webseite</a></h5> <br />
                     <img src="https://img.icons8.com/color/48/000000/code.png"/><h5><a href="https://github.com/PhenixGames/PhenixGames-Homepage">GitHub</a></h5>
                 </div>
             </main>
