--- a/src/views/projects/redesign.ejs
+++ b/src/views/projects/redesign.ejs
@@ -22,7 +22,7 @@
                     In den Settings verstecken sich ein paar Spielereien, wie z.B. Fehlermeldungen on/off, JavaScript Animation on/off, Cookieeinstellungen und einen Darkmode.
                 </p>
                 <div class="p_links">
-                    <img src="https://img.icons8.com/material-rounded/48/000000/external-link.png"/><h5><a href="https://mecksauer.de/projects/redesign/">Webseite</a></h5><br />
+                    <img src="https://img.icons8.com/material-rounded/48/000000/external-link.png"/><h5><a href="#">Webseite</a></h5><br />
                     <img src="https://img.icons8.com/color/48/000000/code.png"/><h5><a href="https://github.com/Mittelblut9/Portfolio-Website-template">GitHub</a></h5>
                 </div>
             </main>
