--- a/src/views/projects/easylogindesign.ejs
+++ b/src/views/projects/easylogindesign.ejs
@@ -19,7 +19,7 @@
                     ... hinter dem Design, war dass man den Sign-In und Sign-Up Bereich direkt in einer Datei hat und nicht unötig mehrere benötigt.
                 </p>
                 <div class="p_links">
-                    <img src="https://img.icons8.com/material-rounded/48/000000/external-link.png"/><h5><a href="https://mecksauer.de/projects/Easy-Login-Design-V1/Login.html">Webseite</a></h5><br />
+                    <img src="https://img.icons8.com/material-rounded/48/000000/external-link.png"/><h5><a href="#">Webseite</a></h5><br />
                     <img src="https://img.icons8.com/color/48/000000/code.png"/><h5><a href="https://github.com/Mittelblut9/Easy-Login-Design-V1">GitHub</a></h5>
                 </div>
             </main>
