--- a/src/views/projects/prodbydaz.ejs
+++ b/src/views/projects/prodbydaz.ejs
@@ -44,7 +44,7 @@
                 </p>
                 <div class="p_links">
                     <img src="https://img.icons8.com/material-rounded/48/000000/external-link.png" />
-                    <h5><a href="https://mecksauer.de/projects/prodbydaz/">Webseite</a></h5>
+                    <h5><a href="#">Webseite</a></h5>
                     <img src="https://img.icons8.com/color/48/000000/code.png" />
                     <h5><a href="https://github.com/BlackDayz/prodbydaz">GitHub</a></h5>
                 </div>
