--- a/public/css/Mido/style.css
+++ b/public/css/Mido/style.css
@@ -1,154 +1,153 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 @import url('./assets/backtotop.css');
 @import url('./assets/nav.css');
 @import url('./assets/custom.css');
 
 * {
-  font-family: "Poppins", sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 html {
-  scroll-behavior: smooth;
-  overflow-x: hidden;
+    scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 .blurple {
-  color: #7289da;
+    color: #7289da;
 }
 
 .bg-base {
-  background-color: #1a2634 !important;
+    background-color: #1a2634 !important;
 }
 
 .footer {
-  background-image: url('../img/cat.svg');
-  background-position: 90%;
-  background-repeat: no-repeat;
-  background-size: contain;
+    background-image: url('../img/cat.svg');
+    background-position: 90%;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .\templates\free-website-templatesmb-12 {
-  margin-bottom: 6rem;
+    margin-bottom: 6rem;
 }
 
 .mt-12 {
-  margin-top: 6rem;
+    margin-top: 6rem;
 }
 
 .ml-12 {
-  margin-left: 6rem;
+    margin-left: 6rem;
 }
 
 .mr-12 {
-  margin-right: 6rem;
+    margin-right: 6rem;
 }
 
 .img-col-ml-13 {
-  margin-left: 13rem;
+    margin-left: 13rem;
 }
 
 .img-col-mr-13 {
-  margin-right: 13rem;
+    margin-right: 13rem;
 }
 
 .has-image-centered {
-  margin-left: auto;
-  margin-right: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .line {
-  background: #00d1b2;
-  background: #00d1b2;
-  width: 150px;
-  height: 5px;
+    background: #00d1b2;
+    background: #00d1b2;
+    width: 150px;
+    height: 5px;
 }
 
 .line2 {
-  background: #00d1b2;
-  background: #00d1b2;
-  width: 75px;
-  height: 5px;
+    background: #00d1b2;
+    background: #00d1b2;
+    width: 75px;
+    height: 5px;
 }
 
 .line-center {
-  margin: 0 auto;
+    margin: 0 auto;
 }
 
 .line.blurple {
-  background: #7289da;
+    background: #7289da;
 }
 
 .title.lined {
-  margin-bottom: 0px;
+    margin-bottom: 0px;
 }
 
 .vert-move {
-  -webkit-animation: mover 1s infinite alternate;
-  animation: mover 1s infinite alternate;
+    -webkit-animation: mover 1s infinite alternate;
+    animation: mover 1s infinite alternate;
 }
 
 .vert-move2 {
-  -webkit-animation: mover 0.5s infinite alternate;
-  animation: mover 0.5s infinite alternate;
+    -webkit-animation: mover 0.5s infinite alternate;
+    animation: mover 0.5s infinite alternate;
 }
 
 @-webkit-keyframes mover {
-  0% {
-    transform: translateY(0);
-  }
-  100% {
-    transform: translateY(-10px);
-  }
+    0% {
+        transform: translateY(0);
+    }
+    100% {
+        transform: translateY(-10px);
+    }
 }
 
 .button.is-blurple {
-  background-color: #7289da;
-  border-color: transparent;
-  color: #fff;
+    background-color: #7289da;
+    border-color: transparent;
+    color: #fff;
 }
 
 .single-feature {
-  position: relative;
-  z-index: 5;
+    position: relative;
+    z-index: 5;
 }
 
 .shape-right {
-  position: absolute;
-  top: -40px;
-  right: 0;
-  width: 40%;
-  height: 100%;
-  z-index: -1;
-  opacity: 30%;
+    position: absolute;
+    top: -40px;
+    right: 0;
+    width: 40%;
+    height: 100%;
+    z-index: -1;
+    opacity: 30%;
 }
 
 .shape-right img {
-  width: 100%;
+    width: 100%;
 }
 
 @media (max-width: 767px) {
-  .shape-right
- {
-    display: none;
-  }
+    .shape-right {
+        display: none;
+    }
 }
 
 .shape-left {
-  position: absolute;
-  top: -80px;
-  left: 90px;
-  width: 35%;
-  height: 100%;
-  z-index: -1;
-  opacity: 30%;
+    position: absolute;
+    top: -80px;
+    left: 90px;
+    width: 35%;
+    height: 100%;
+    z-index: -1;
+    opacity: 30%;
 }
 
 .shape-left img {
-  width: 100%;
+    width: 100%;
 }
 
 @media (max-width: 767px) {
-  .shape-left {
-    display: none;
-  }
+    .shape-left {
+        display: none;
+    }
 }
