--- a/public/css/dc_profile/dc_profile.css
+++ b/public/css/dc_profile/dc_profile.css
@@ -1,4 +1,4 @@
-@import url("../../font/style.css");
+@import url('../../font/style.css');
 
 .tooltip {
     display: none;
@@ -10,15 +10,15 @@
     max-width: 150px;
     width: max-content;
     font-size: 0.83rem;
-  }
-  
-  .tooltip-up {
+}
+
+.tooltip-up {
     bottom: 40px;
     right: -10px;
-  }
-  
-  .tooltip-up::before {
-    content: "";
+}
+
+.tooltip-up::before {
+    content: '';
     position: absolute;
     right: 10px;
     bottom: -6px;
@@ -27,15 +27,15 @@
     border-left: 6px solid transparent;
     border-right: 6px solid transparent;
     border-top: 6px solid #202020;
-  }
-  
-  .card-container {
+}
+
+.card-container {
     display: flex;
     flex-direction: row;
     justify-content: center;
-  }
-  
-  .card {
+}
+
+.card {
     box-sizing: border-box;
     background: #171717;
     width: 300px;
@@ -47,31 +47,31 @@
     overflow: auto;
     scrollbar-width: none;
     margin: 0 0 0 18%;
-  }
-  
-  .card::-webkit-scrollbar {
+}
+
+.card::-webkit-scrollbar {
     display: none;
-  }
-  
-  .card-header .banner {
+}
+
+.card-header .banner {
     width: 100%;
     height: 60px;
     background: #ff8527;
-  }
-  
-  .card-header .banner-image {
+}
+
+.card-header .banner-image {
     width: 100%;
     height: 120px;
     background-position: center !important;
     background-size: 100% auto !important;
-  }
-  
-  .card-header .infos {
+}
+
+.card-header .infos {
     padding: 0 15px;
     position: relative;
-  }
-  
-  .card-header .infos .profil-logo {
+}
+
+.card-header .infos .profil-logo {
     position: absolute;
     top: -280%;
     background: black;
@@ -82,8 +82,8 @@
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
 }
-  
-  .card-header .infos .profil-logo img {
+
+.card-header .infos .profil-logo img {
     width: 80px;
     height: 80px;
     border: 6px solid #171717;
@@ -93,8 +93,8 @@
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
 }
-  
-  .card-header .infos .profil-logo::before {
+
+.card-header .infos .profil-logo::before {
     opacity: 0;
     cursor: pointer;
     position: absolute;
@@ -103,7 +103,7 @@
     width: 87%;
     height: 84%;
     border: 6px solid #171717;
-    content: "See Profil";
+    content: 'See Profil';
     color: #eeeeee;
     background: #0000007e;
     border-radius: 50%;
@@ -113,13 +113,13 @@
     font-size: 0.7rem;
     text-transform: uppercase;
     transition-duration: 0.15s;
-  }
-  
-  .card-header .infos .profil-logo:hover::before {
+}
+
+.card-header .infos .profil-logo:hover::before {
     opacity: 1;
-  }
-  
-  .card-header .infos .badges-container {
+}
+
+.card-header .infos .badges-container {
     position: absolute;
     top: -120%;
     right: 0;
@@ -128,74 +128,74 @@
     flex-wrap: wrap;
     justify-content: flex-end;
     width: 160px;
-  }
-  
-  .card-header .infos .badges-container .badge-item {
+}
+
+.card-header .infos .badges-container .badge-item {
     position: relative;
     margin-left: 8px;
     margin-bottom: 5px;
     height: 15px;
     display: flex;
     justify-content: center;
-  }
-  
-  .card-header .infos .badges-container .badge-item img {
+}
+
+.card-header .infos .badges-container .badge-item img {
     height: 100%;
-  }
-  
-  .card-header .infos .badges-container .badge-item:hover>.tooltip {
+}
+
+.card-header .infos .badges-container .badge-item:hover > .tooltip {
     display: block;
-  }
-  
-  .card-header .infos .username {
+}
+
+.card-header .infos .username {
     color: #eeeeee;
     margin-top: 55px;
     margin-bottom: 10px;
     font-weight: 600;
     font-size: 1.3rem;
-  }
-  
-  .card-header .infos .username span {
+}
+
+.card-header .infos .username span {
     font-weight: 500;
     color: #8f8f8f;
-  }
-  
-  .card-header .infos hr {
+}
+
+.card-header .infos hr {
     border: 1px solid #212121;
-  }
-  
-  .card-content {
+}
+
+.card-content {
     padding: 0 15px;
-  }
-  
-  .card-content .category-title {
+}
+
+.card-content .category-title {
     color: #c2c2c2;
     font-weight: 600;
     text-transform: uppercase;
     font-size: 0.85rem;
     margin-bottom: 10px;
-  }
-  
-  .card-content .about-me {
+}
+
+.card-content .about-me {
     margin-bottom: 12px;
     margin-top: 10px;
-  }
-  
-  .card-content .about-me p {
+}
+
+.card-content .about-me p {
     color: #eee;
     font-size: 0.9rem;
-  }
-  
-  .card-content .roles {
+}
+
+.card-content .roles {
     margin-bottom: 12px;
-  }
-  
-  .card-content .roles .roles-list {
+}
+
+.card-content .roles .roles-list {
     display: flex;
     flex-wrap: wrap;
-  }
-  
-  .card-content .roles .roles-list .role {
+}
+
+.card-content .roles .roles-list .role {
     background: #353535;
     color: #f5f5f5;
     border-radius: 2px;
@@ -207,21 +207,21 @@
     display: flex;
     align-items: center;
     flex-direction: row;
-  }
-  
-  .card-content .roles .roles-list .role .color {
+}
+
+.card-content .roles .roles-list .role .color {
     width: 11px;
     height: 11px;
     background: orange;
     border-radius: 50%;
     margin-right: 5px;
-  }
-  
-  .card-content .note {
+}
+
+.card-content .note {
     margin-bottom: 15px;
-  }
-  
-  .card-content .note textarea {
+}
+
+.card-content .note textarea {
     border: none;
     outline: none;
     background: #171717;
@@ -234,26 +234,26 @@
     padding: 5px;
     box-sizing: border-box;
     scrollbar-width: none;
-    font-family: "Whitney", sans-serif;
-  }
-  
-  .card-content .note textarea::-webkit-scrollbar {
+    font-family: 'Whitney', sans-serif;
+}
+
+.card-content .note textarea::-webkit-scrollbar {
     display: none;
-  }
-  
-  .card-content .note textarea::placeholder {
+}
+
+.card-content .note textarea::placeholder {
     font-size: 0.7rem;
-  }
-  
-  .card-content .note textarea:focus {
+}
+
+.card-content .note textarea:focus {
     background: #1f1f1f;
-  }
-  
-  .card-footer {
+}
+
+.card-footer {
     padding: 0 15px 15px 15px;
-  }
-  
-  .card-footer input {
+}
+
+.card-footer input {
     background: #353535;
     outline: none;
     border: 1.5px solid #333333;
@@ -263,8 +263,8 @@
     border-radius: 3px;
     color: #eeeeee;
     transition-duration: 0.3s;
-  }
-  
-  .card-footer input:focus {
+}
+
+.card-footer input:focus {
     border-color: orange;
-  }
+}
