--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,169 +2,169 @@
 @import url('./projects/project.css');
 
 :root {
-  --white: rgb(226, 226, 226);
-  --black: #1e1e1e;
+    --white: rgb(226, 226, 226);
+    --black: #1e1e1e;
 }
 
 ::-webkit-scrollbar {
-  width: 0px;
-  display: none;
+    width: 0px;
+    display: none;
 }
 
 * {
-  box-sizing: border-box;
-  scroll-behavior: smooth;
-  font-display: optional;
-  scrollbar-width: none;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+    font-display: optional;
+    scrollbar-width: none;
 }
 
 body,
 html {
-  margin: 0;
-  padding: 0;
-  font-family: roboto, sans-serif;
-  background: rgb(202, 202, 202);
+    margin: 0;
+    padding: 0;
+    font-family: roboto, sans-serif;
+    background: rgb(202, 202, 202);
 }
 
 a {
-  color: inherit;
+    color: inherit;
 }
 
 .top_page {
-  height: 70vh;
-  background: var(--white);
+    height: 70vh;
+    background: var(--white);
 }
 
 .head_text {
-  left: 50%;
-  top: 20vh;
+    left: 50%;
+    top: 20vh;
 
-  transform: translateX(-50%);
-  -webkit-transform: translateX(-50%);
-  -moz-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  -o-transform: translateX(-50%);
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
 }
 
 .head_text h1 {
-  font-size: 2.4rem;
-  letter-spacing: 3.4px;
+    font-size: 2.4rem;
+    letter-spacing: 3.4px;
 }
 
 .head_arrows {
-  top: 55vh;
-  left: 50%;
+    top: 55vh;
+    left: 50%;
 
-  transform: translateX(-50%);
-  -webkit-transform: translateX(-50%);
-  -moz-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  -o-transform: translateX(-50%);
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
 }
 
 .head_arrows img {
-  animation: head_arrow 1s infinite alternate;
-  -webkit-animation: head_arrow 1s infinite alternate;
+    animation: head_arrow 1s infinite alternate;
+    -webkit-animation: head_arrow 1s infinite alternate;
 }
 
 @keyframes head_arrow {
-  0% {
-    transform: translateY(5px);
-    -webkit-transform: translateY(5px);
-    -moz-transform: translateY(5px);
-    -ms-transform: translateY(5px);
-    -o-transform: translateY(5px);
-}
+    0% {
+        transform: translateY(5px);
+        -webkit-transform: translateY(5px);
+        -moz-transform: translateY(5px);
+        -ms-transform: translateY(5px);
+        -o-transform: translateY(5px);
+    }
 
-  100% {
-    transform: translateY(10px);
-    -webkit-transform: translateY(10px);
-    -moz-transform: translateY(10px);
-    -ms-transform: translateY(10px);
-    -o-transform: translateY(10px);
-  }
+    100% {
+        transform: translateY(10px);
+        -webkit-transform: translateY(10px);
+        -moz-transform: translateY(10px);
+        -ms-transform: translateY(10px);
+        -o-transform: translateY(10px);
+    }
 }
 
 .about_me {
-  padding: 90px 80px;
-  height: 100vh;
-  background: var(--black);
+    padding: 90px 80px;
+    height: 100vh;
+    background: var(--black);
 }
 
 .about_me_left {
-  width: 50%;
-  padding: 5% 100px 0 100px;
-  font-weight: 520
+    width: 50%;
+    padding: 5% 100px 0 100px;
+    font-weight: 520;
 }
 
 .about_me_left p {
-  font-size: 1.6rem;
-  letter-spacing: 1.2px;
+    font-size: 1.6rem;
+    letter-spacing: 1.2px;
 }
 
 .about_me_right {
-  width: 50%;
+    width: 50%;
 }
 
 .references,
 .my-bots {
-  background: var(--white);
+    background: var(--white);
 }
 
 .references header,
 .my-bots header {
-  padding: 50px;
-  letter-spacing: 5px;
+    padding: 50px;
+    letter-spacing: 5px;
 }
 
 .references header h2::after,
 .my-bots header h2::after {
-  content: '';
-  width: 100px;
-  height: 2px;
-  position: absolute;
-  left: 50%;
-  margin-top: 40px;
-  transform: translateX(-50%);
-  background: black;
-  -webkit-transform: translateX(-50%);
-  -moz-transform: translateX(-50%);
-  -ms-transform: translateX(-50%);
-  -o-transform: translateX(-50%);
+    content: '';
+    width: 100px;
+    height: 2px;
+    position: absolute;
+    left: 50%;
+    margin-top: 40px;
+    transform: translateX(-50%);
+    background: black;
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
 }
 
 .ref_gif_top,
 .bots_gif_top {
-  padding: 50px 0 50px 0;
+    padding: 50px 0 50px 0;
 }
 
 #dev_funny_gif,
 #dc_funny_gif {
-  width: 600px;
+    width: 600px;
 }
 
 .references main {
-  padding: 90px 0;
+    padding: 90px 0;
 }
 
 footer {
-  padding: 10px 0;
+    padding: 10px 0;
 }
 
 footer span img {
-  margin: 0 10px;
+    margin: 0 10px;
 }
 
 .privacy,
 .impressum {
-  margin: 50px auto;
-  width: 50%;
+    margin: 50px auto;
+    width: 50%;
 }
 
 .bot-showcase a {
-  margin: 50px auto;
+    margin: 50px auto;
 }
 
 .bot-showcase a img {
-  width: 300px;
+    width: 300px;
 }
