wip/animated background

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -10,7 +10,7 @@
     </head>
 
     <body>
-        <header class="top_page width-100">
+        <header class="top_page width-100" id="header_background">
             <div class="head_text center absolute">
                 <h1 class="black text-transform-up">BlackDayz</h1>
                 <p><span class="red">Junior</span> Web Developer, <span class="red">Junior</span> Discord Bot Developer,
@@ -30,10 +30,13 @@
                         years
                         old and a <span class="red">Junior</span> Web Developer living in Germany</p>
                     <br />
-                    <p><img src="img/icons/degree-42.png" width="42" />At the moment I am completing my training as a
+                    <p><img src="img/icons/icons8-prize-48.png" width="42" />Official trained
                         <strong>technical design assistant</strong> </p>
                     <br />
-                    <p><img src="img/icons/cloud-48.png" width="42" /> Most of the days i'm working on projects like
+                    <p><img src="img/icons/degree-42.png" width="42" />At the moment I am completing my training as a
+                        <strong>IT specialist for application development</strong> </p>
+                    <br />
+                    <p><img src="img/icons/cloud-48.png" width="42" />Most of the days i'm working on projects like
                         websites or my own Discord Bot.. or uhm.. just playing games :)</p>
                 </div>
 
