--- a/src/views/_head/head.ejs
+++ b/src/views/_head/head.ejs
@@ -41,6 +41,15 @@
 <link rel="stylesheet" href="https://blackdayz.de/css/blackcss" />
 
 
-
-
-<!-- ! MIDO ! -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js" async defer></script>
+<script src="https://cdn.jsdelivr.net/npm/vanta/dist/vanta.waves.min.js" async defer></script>
+<script>
+    VANTA.WAVES({
+        el: "#header_background",
+        mouseControls: true,
+        touchControls: true,
+        gyroControls: false,
+        scale: 1.00,
+        scaleMobile: 1.00
+    })
+</script>
