--- a/src/assets/scss/dc_profile/dc_profile.scss
+++ b/src/assets/scss/dc_profile/dc_profile.scss
@@ -13,18 +13,18 @@
 .tooltip-up {
     bottom: 40px;
     right: -10px;
-}
 
-.tooltip-up::before {
-    content: '';
-    position: absolute;
-    right: 10px;
-    bottom: -6px;
-    width: 0;
-    height: 0;
-    border-left: 6px solid transparent;
-    border-right: 6px solid transparent;
-    border-top: 6px solid #202020;
+    &::before {
+        content: '';
+        position: absolute;
+        right: 10px;
+        bottom: -6px;
+        width: 0;
+        height: 0;
+        border-left: 6px solid transparent;
+        border-right: 6px solid transparent;
+        border-top: 6px solid #202020;
+    }
 }
 
 .card-container {
@@ -36,12 +36,11 @@
 .card {
     box-sizing: border-box;
     background: #171717;
-    width: 300px;
+    width: 400px;
     height: max-content;
-    max-height: 95%;
     border-radius: 9px;
-    -webkit-box-shadow: 0px 0px 16px 3px rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 0px 16px 3px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 0px 16px 3px rgba(0, 0, 0, 0.514);
+    box-shadow: 0px 0px 16px 3px rgba(0, 0, 0, 0.514);
     overflow: auto;
     scrollbar-width: none;
     margin: 0 0 0 18%;
@@ -51,218 +50,221 @@
     display: none;
 }
 
-.card-header .banner {
-    width: 100%;
-    height: 60px;
-    background: #ff8527;
-}
+.card-header {
+    padding: 0;
 
-.card-header .banner-image {
-    width: 100%;
-    height: 120px;
-    background-position: center !important;
-    background-size: 100% auto !important;
-}
+    .banner {
+        width: 100%;
+        height: 60px;
+        background: #ff8527;
+    }
 
-.card-header .infos {
-    padding: 0 15px;
-    position: relative;
-}
+    .banner-image {
+        width: 100%;
+        height: 120px;
+        background-position: center !important;
+        background-size: 100% auto !important;
+    }
 
-.card-header .infos .profil-logo {
-    position: absolute;
-    top: -280%;
-    background: black;
-    border-radius: 50%;
-    height: 80px;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-}
+    .infos {
+        padding: 0 15px;
+        position: relative;
 
-.card-header .infos .profil-logo img {
-    width: 80px;
-    height: 80px;
-    border: 6px solid #171717;
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
-}
+        .profil-logo {
+            position: absolute;
+            top: -175%;
+            background: black;
+            border-radius: 50%;
+            height: 80px;
+            -webkit-border-radius: 50%;
+            -moz-border-radius: 50%;
+            -ms-border-radius: 50%;
+            -o-border-radius: 50%;
 
-.card-header .infos .profil-logo::before {
-    opacity: 0;
-    cursor: pointer;
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 87%;
-    height: 84%;
-    border: 6px solid #171717;
-    content: 'See Profil';
-    color: #eeeeee;
-    background: #0000007e;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 0.7rem;
-    text-transform: uppercase;
-    transition-duration: 0.15s;
-}
+            img {
+                width: 80px;
+                height: 80px;
+                border: 6px solid #171717;
+                border-radius: 50%;
+                -webkit-border-radius: 50%;
+                -moz-border-radius: 50%;
+                -ms-border-radius: 50%;
+                -o-border-radius: 50%;
+            }
 
-.card-header .infos .profil-logo:hover::before {
-    opacity: 1;
-}
+            &::before {
+                opacity: 0;
+                cursor: pointer;
+                position: absolute;
+                right: 0;
+                top: 0;
+                width: 87%;
+                height: 84%;
+                border: 6px solid #171717;
+                content: 'See Profil';
+                color: #eeeeee;
+                background: #0000007e;
+                border-radius: 50%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 0.7rem;
+                text-transform: uppercase;
+                transition-duration: 0.15s;
+            }
 
-.card-header .infos .badges-container {
-    position: absolute;
-    top: -120%;
-    right: 0;
-    padding: inherit;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    width: 160px;
-}
+            &:hover::before {
+                opacity: 1;
+            }
+        }
 
-.card-header .infos .badges-container .badge-item {
-    position: relative;
-    margin-left: 8px;
-    margin-bottom: 5px;
-    height: 15px;
-    display: flex;
-    justify-content: center;
-}
+        .badges-container {
+            position: absolute;
+            top: -58%;
+            right: 0;
+            padding: inherit;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: flex-end;
+            width: 160px;
 
-.card-header .infos .badges-container .badge-item img {
-    height: 100%;
-}
+            .badge-item {
+                position: relative;
+                margin-left: 8px;
+                margin-bottom: 5px;
+                height: 15px;
+                display: flex;
+                justify-content: center;
 
-.card-header .infos .badges-container .badge-item:hover > .tooltip {
-    display: block;
-}
+                img {
+                    height: 100%;
+                }
 
-.card-header .infos .username {
-    color: #eeeeee;
-    margin-top: 55px;
-    margin-bottom: 10px;
-    font-weight: 600;
-    font-size: 1.3rem;
-}
+                &:hover > .tooltip {
+                    display: block;
+                }
+            }
+        }
 
-.card-header .infos .username span {
-    font-weight: 500;
-    color: #8f8f8f;
-}
+        .username {
+            color: #eeeeee;
+            margin-top: 39px;
+            font-weight: 600;
+            font-size: 1.3rem;
 
-.card-header .infos hr {
-    border: 1px solid #212121;
+            span {
+                font-weight: 500;
+                color: #8f8f8f;
+            }
+        }
+
+        hr {
+            border: 1px solid #ffffff;
+        }
+    }
 }
 
 .card-content {
     padding: 0 15px;
-}
 
-.card-content .category-title {
-    color: #c2c2c2;
-    font-weight: 600;
-    text-transform: uppercase;
-    font-size: 0.85rem;
-    margin-bottom: 10px;
-}
+    .category-title {
+        color: #c2c2c2;
+        font-weight: 600;
+        text-transform: uppercase;
+        font-size: 0.85rem;
+        margin-bottom: 10px;
+    }
 
-.card-content .about-me {
-    margin-bottom: 12px;
-    margin-top: 10px;
-}
+    .about-me {
+        margin-bottom: 12px;
 
-.card-content .about-me p {
-    color: #eee;
-    font-size: 0.9rem;
-}
+        p {
+            color: #eee;
+            font-size: 0.9rem;
+        }
+    }
 
-.card-content .roles {
-    margin-bottom: 12px;
-}
+    .roles {
+        margin-bottom: 12px;
 
-.card-content .roles .roles-list {
-    display: flex;
-    flex-wrap: wrap;
-}
+        .roles-list {
+            display: flex;
+            flex-wrap: wrap;
 
-.card-content .roles .roles-list .role {
-    background: #353535;
-    color: #f5f5f5;
-    border-radius: 2px;
-    font-size: 0.85rem;
-    font-weight: 300;
-    padding: 2px 6px;
-    margin-right: 4px;
-    margin-top: 4px;
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-}
+            .role {
+                background: #353535;
+                color: #f5f5f5;
+                border-radius: 2px;
+                font-size: 0.85rem;
+                font-weight: 300;
+                padding: 2px 6px;
+                margin-right: 4px;
+                margin-top: 4px;
+                display: flex;
+                align-items: center;
+                flex-direction: row;
 
-.card-content .roles .roles-list .role .color {
-    width: 11px;
-    height: 11px;
-    background: orange;
-    border-radius: 50%;
-    margin-right: 5px;
-}
+                .color {
+                    width: 11px;
+                    height: 11px;
+                    background: orange;
+                    border-radius: 50%;
+                    margin-right: 5px;
+                }
+            }
+        }
+    }
 
-.card-content .note {
-    margin-bottom: 15px;
-}
+    .note {
+        margin-bottom: 15px;
 
-.card-content .note textarea {
-    border: none;
-    outline: none;
-    background: #171717;
-    width: 100%;
-    min-height: 30px;
-    color: #e0e0e0;
-    resize: none;
-    font-size: 0.7rem;
-    border-radius: 3px;
-    padding: 5px;
-    box-sizing: border-box;
-    scrollbar-width: none;
-    font-family: 'Whitney', sans-serif;
-}
+        textarea {
+            border: none;
+            outline: none;
+            background: #171717;
+            width: 100%;
+            min-height: 30px;
+            color: #e0e0e0;
+            resize: none;
+            font-size: 0.7rem;
+            border-radius: 3px;
+            padding: 5px;
+            box-sizing: border-box;
+            scrollbar-width: none;
+            font-family: 'Whitney', sans-serif;
 
-.card-content .note textarea::-webkit-scrollbar {
-    display: none;
-}
+            &::-webkit-scrollbar {
+                display: none;
+            }
 
-.card-content .note textarea::placeholder {
-    font-size: 0.7rem;
-}
+            &::placeholder {
+                font-size: 0.7rem;
+            }
 
-.card-content .note textarea:focus {
-    background: #1f1f1f;
+            &:focus {
+                background: #1f1f1f;
+            }
+        }
+    }
 }
 
 .card-footer {
     padding: 0 15px 15px 15px;
+
+    input {
+        background: #353535;
+        outline: none;
+        border: 1.5px solid #333333;
+        padding: 10px;
+        width: 100%;
+        box-sizing: border-box;
+        border-radius: 3px;
+        color: #eeeeee;
+        transition-duration: 0.3s;
+
+        &::focus {
+            border-color: orange;
+        }
+    }
 }
 
-.card-footer input {
-    background: #353535;
-    outline: none;
-    border: 1.5px solid #333333;
-    padding: 10px;
-    width: 100%;
-    box-sizing: border-box;
-    border-radius: 3px;
-    color: #eeeeee;
-    transition-duration: 0.3s;
-}
-
-.card-footer input:focus {
-    border-color: orange;
-}
