--- a/src/assets/scss/work/work.scss
+++ b/src/assets/scss/work/work.scss
@@ -1,58 +1,30 @@
-#work_wrapper {
-    width: 100%;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 0px 0px;
-    grid-template-areas:
-        '. .'
-        '. .'
-        '. .';
-    padding: 0;
-}
+@import '../variables.scss';
 
 .work {
-    max-height: 80vh;
+    max-height: 50vh;
     height: 80vh;
-    width: 100%;
     color: #fff;
     background-color: #000;
 }
 
 .work img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-    opacity: 0.5;
-    z-index: -1;
     transition: opacity 0.5s;
 }
 
 .work img:hover {
-    opacity: 0.7;
+    opacity: 0.7 !important;
 }
 
 .work_name {
-    text-align: center;
-    z-index: 9;
-    transform: translateY(-400px);
+    transform: translateY(-350px);
     pointer-events: none;
 }
 
-.work_show_more {
-    text-align: center;
-    padding: 30px 0;
-}
-
-.work_show_more span {
-    cursor: pointer;
-    border: 1px solid black;
-    padding: 10px 20px;
+.work_show_more a {
     transition: all 0.5s;
-    font-weight: 700;
-}
+    border: 1px solid $black;
 
-.work_show_more span:hover {
-    box-shadow: 0 3px 20px 0 rgba(0, 0, 0, 0.185);
+    &:hover {
+        box-shadow: 0 3px 20px 0 rgba(0, 0, 0, 0.185);
+    }
 }
