--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -1,4 +1,8 @@
 @import 'bootstrap/dist/css/bootstrap.css';
+@import 'bootstrap/dist/css/bootstrap-grid.css';
+@import 'bootstrap/dist/css/bootstrap-utilities.css';
+@import 'bootstrap/dist/css/bootstrap-reboot.css';
+
 @import 'bootstrap-vue-next/dist/bootstrap-vue-next.css';
 
 @import 'variables.scss';
