--- a/src/assets/scss/homepage/homepage.scss
+++ b/src/assets/scss/homepage/homepage.scss
@@ -5,7 +5,11 @@
 }
 
 .head_text h1 {
-    font-size: 6rem;
+    font-size: 4rem;
+
+    @media (min-width: 768px) { 
+        font-size: 6rem;
+    }
 }
 
 .head_text_change_animation {
