--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -7,3 +7,12 @@ $spacer-4: 1.5rem;
 $spacer-5: 3rem;
 $spacer-6: 4.5rem;
 $spacer-7: 6rem;
+
+$grid-breakpoints: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px,
+  xxl: 1400px
+);
