style: prettier changes

--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -9,10 +9,10 @@ $spacer-6: 4.5rem;
 $spacer-7: 6rem;
 
 $grid-breakpoints: (
-  xs: 0,
-  sm: 576px,
-  md: 768px,
-  lg: 992px,
-  xl: 1200px,
-  xxl: 1400px
+    xs: 0,
+    sm: 576px,
+    md: 768px,
+    lg: 992px,
+    xl: 1200px,
+    xxl: 1400px,
 );
